[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "=0.5.0-rc.4"
# fltk = "^1.4"
#iced = "0.9"
#gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }
# async-std = "1.12.0"
# libc = "0.2.148"
# time = "0.3"
# crossterm = "0.26.1"
#druid = "0.8.3"
# errno = "0.3.1"
#egui = "0.21.0"
#gtk4 =  "0.6.6"
